Display API data without rescue

--- a/app/assets/stylesheets/config/_sizes.sass
+++ b/app/assets/stylesheets/config/_sizes.sass
@@ -3,3 +3,5 @@ $navbar-height: 66px
 $site-logo-height: calc(#{$navbar-height} * 0.8)
 $site-logo-position: calc((#{$navbar-height} - #{$site-logo-height}) / 2)
 $login-position: $site-logo-position
+
+$page-height: calc(100vh - #{$navbar-height})
