--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,2 +1,5 @@
-%h1
-  Pages#home
+.container.page-container
+  .row.h-100
+    .col-md-4.offset-md-4.h-100.d-flex.align-items-center
+      %input
+
