Persist/Display results

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,5 +10,5 @@
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true
   %body
     = render 'shared/navbar'
-    =# render 'shared/flashes'
+    = render 'shared/flashes'
     = yield
