--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,5 +1,12 @@
 .container.page-container
   .row.h-100
-    .col-md-4.offset-md-4.h-100.d-flex.align-items-center
-      %input
+    .col-md-4.offset-md-4.h-100.d-flex.flex-column.justify-content-center
+      = form_tag display_followers_path, method: :get do
+        = text_field_tag :query, params[:query], placeholder: 'Enter twitter name'
+        %button
+          Search
+      - if current_user
+        %div
+          = link_to "View your history", search_items_path
+
 
