Style login pages and add dummy data for API error

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -19,6 +19,12 @@ body
   background-position: 43% 50%
   background-size: cover
   background-repeat: repeat-y
+  color: white
+  a
+    color: white
+    &:hover
+      color: white
+      text-decoration: none
   @media (min-width: 2000px)
     background: image-url("background.jpg")
 
