--- a/app/views/pages/display_followers.html.haml
+++ b/app/views/pages/display_followers.html.haml
@@ -16,6 +16,6 @@
             = f.simple_fields_for :search_results do |r|
               = r.hidden_field :twitter_id_number
               = r.hidden_field :twitter_screen_name
-            = f.submit "Save your search", class: 'btn btn-success'
+            = f.submit "Save your search", class: 'btn btn-primary'
         - else
           Create an account to save your search history
