--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,15 +1,18 @@
-%h2
-  Sign up
+.container.page-container
+  .row.h-100
+    .col-12.col-md-6.offset-md-3.col-xl-4.offset-xl-4.h-100.d-flex.flex-column.justify-content-center
+      %h2
+        Sign up
 
-= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = f.error_notification
+      = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+        = f.error_notification
 
-  .form-inputs
-    = f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" }
-    = f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: "new-password" }
-    = f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password" }
+        .form-inputs
+          = f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" }
+          = f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: "new-password" }
+          = f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password" }
 
-  .form-actions
-    = f.button :submit, "Sign up"
+        .form-actions
+          = f.button :submit, "Sign up", class: 'btn btn-primary'
 
-= render "devise/shared/links"
+      = render "devise/shared/links"
